--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@svgr/webpack": "^8.1.0",
     "next": "16.1.5",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-loader-spinner": "^8.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
