--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "jspdf": "^4.1.0",
     "next": "16.1.5",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-loader-spinner": "^8.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
